2014-03-01  Asterisk Development Team <asteriskteam@digium.com>

	* Asterisk 12.1.0-rc3 Released.

	* chan_sip: Fix crash in ast_channel_hangupcause_set().

	  Fix crash in ast_channel_hangupcause_set() because p->owner not
	  checked before calling.  Regression introduced by the fix for
	  ASTERISK-22621.

	  (closes issue ASTERISK-23135)
	  Reported by: OK

	  (issue ASTERISK-23323)
	  Reported by: Walter Doekes

2013-02-27  Asterisk Development Team <asteriskteam@digium.com>

	* Asterisk 12.1.0-rc2 Released.

	* res_rtp_asterisk: Fix checklist creating problems in ICE sessions
	  
	  Prior to this patch, local candidate lists including SRFLX would
	  fail to start properly when building ICE candidate check lists. This
	  patch fixes that problem by making sure that each SRFLX candidate is
	  associated with the proper base address so that the check list can
	  create matches properly.

	  This patch was written by jcolp. The issue will be left open to await
	  testing by the issue participants.       

	  (issue ASTERISK-23213)
	  Reported by: Andrea Suisani
	  Review: https://reviewboard.asterisk.org/r/3256/

	* res_fax: Warn that minrate=2400 is not valid for V.27 instead of
	  failing load.

	  Change minrate from 2400 to 4800 on config reload in response to
	  changes from ASTERISK-22790 only.  Any config with minrate of
	  2400 that would fail before r405693 will still fail.

	  Comment out many settings in res_fax.conf.sample. The defaults are
	  set in res_fax.c, so setting the same value in sample config does
	  nothing but make the sample config more fragile.

	  (closes issue ASTERISK-23231)
	  Reported by: David Brillert
	  Review: https://reviewboard.asterisk.org/r/3261/

	* main: Initialize dialplan providing core components prior to module
	  pre-load

	  It is possible to pre-load pbx_config. As a result, pbx_config -
	  which will load and parse the dialplan - will attempt to use various